--- a/macos/Sources/TheQuickFox/Onboarding/Resources/completion.html
+++ b/macos/Sources/TheQuickFox/Onboarding/Resources/completion.html
@@ -145,7 +145,7 @@
         }
 
         .close-btn {
-            background: linear-gradient(135deg, var(--gradient-start, #667eea), var(--gradient-end, #764ba2));
+            background: linear-gradient(135deg, var(--gradient-start, #007aff), var(--gradient-end, #0055d4));
             color: white;
             border: none;
             padding: 16px 48px;
@@ -155,12 +155,12 @@
             cursor: pointer;
             transition: all 0.2s ease;
             margin-top: 24px;
-            box-shadow: 0 4px 14px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 4px 14px rgba(0, 122, 255, 0.4);
         }
 
         .close-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.5);
+            box-shadow: 0 6px 20px rgba(0, 122, 255, 0.5);
         }
     </style>
 </head>
@@ -308,7 +308,7 @@
 
             const particles = [];
             const particleCount = 150;
-            const colors = ['#667eea', '#764ba2', '#ff9500', '#34c759', '#007aff', '#ff3b30'];
+            const colors = ['#007aff', '#0055d4', '#ff9500', '#34c759', '#5ac8fa', '#ff3b30'];
 
             class Particle {
                 constructor() {
